# WallMan

./: .gitignore  README.md  Wallman.sh  installing_script.sh  pyproject.toml  settings.json
configs/: settings.json
manager/: main.py
manager/business/: configManager.py  unixClient.py  utils.py
manager/control/: controller.py
manager/view/: carouselList_widget.py  imageList_widget.py  mainwindow.py
manager/view/forms/: imageList_widget.ui  mainwindow.ui  ui_imageList_widget.py  ui_mainwindow.py
worker/: worker.py
worker/utils/: kde_change_wallpaper_command.sh  unixServer.py
