[tool.poetry]
name = "wallman"
version = "0.1.0"
description = "Gerenciador de wallpapers para o Linux"
authors = ["TarcizioLafaiete <tarcizio-augusto@hotmail.com>"]
#readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
PySide6 = "^6.7.0"
opencv-python = "^4.10.0.84"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
